# minecraft-server-manager

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  module.nix  rust-toolchain.toml
src/: cli.rs  main.rs
src/command/: attach.rs  backup.rs  mod.rs  run.rs  send.rs
