[package]
name = "minecraft-server-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
flate2 = "1.1.9"
rustic_backend = { version = "0.6.1", default-features = false, features = ["opendal"] }
rustic_core = "0.11.0"
tar = "0.4.45"
tokio = { version = "1.52.2", features = ["full"] }
